--- a/lab-01-hello-r.Rmd
+++ b/lab-01-hello-r.Rmd
@@ -308,7 +308,7 @@ Start with `dino_data` and calculate a summary statistic that we will call `r` a
 
 3.  Plot `y` vs. `x` for the `star` dataset. You can (and should) reuse code we introduced above, just replace the dataset name with the desired dataset. Then, calculate the correlation coefficient between `x` and `y` for this dataset. How does this value compare to the `r` of `dino`?
 
-The r of dino is -0.06447185	while the r of star is 0.0629611. 
+The r of dino is -0.06447185	while the r of star is -0.0629611. 
 ```{r}
 star_data <- datasaurus_dozen %>%
   filter(dataset == "star")
@@ -332,12 +332,19 @@ It does not change **x** and **y**
 
 4.  Plot `y` vs. `x` for the `circle` dataset. You can (and should) reuse code we introduced above, just replace the dataset name with the desired dataset. Then, calculate the correlation coefficient between `x` and `y` for this dataset. How does this value compare to the `r` of `dino`?
 
+Circle data is valued at -0.06834336 and dino data is valued at -0.06447185 
+
 ```{r}
 star_data <- datasaurus_dozen %>%
   filter(dataset == "circle")
 ```
 
-There is no change for 'circle' dataset **x**, and **y**
+```{r}
+ `star_data`%>%
+  summarize(r = cor(x,y))
+
+
+```	
 
 🧶 ✅ ⬆️ *You should pause again, commit changes with the commit message "Added answer for Ex 4", and push. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
 
